2. Принципы Kiss, Dry и Yagni