@@ -1,11 +1,10 @@
 package ru.job4j.collection;
 
 import org.junit.jupiter.api.Test;
-import static org.hamcrest.MatcherAssert.assertThat;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
-import static org.hamcrest.core.Is.is;
+import static org.assertj.core.api.Assertions.*;
 
 public class NotifyAccountTest {
 
@@ -16,12 +15,12 @@ public class NotifyAccountTest {
                 new Account("142", "Petr Arsentev", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+               List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f"),
                         new Account("142", "Petr Arsentev", "000001")
                 )
         );
-        assertThat(NotifyAccount.sent(accounts), is(expect));
+        assertThat(NotifyAccount.sent(accounts)).isEqualTo(expect);
     }
 
     @Test
@@ -31,10 +30,10 @@ public class NotifyAccountTest {
                 new Account("123", "Petr Arsentev", "eDer3432f")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("123", "Petr Arsentev", "eDer3432f")
-                        )
+                )
         );
-        assertThat(NotifyAccount.sent(accounts), is(expect));
+        assertThat(NotifyAccount.sent(accounts)).isEqualTo(expect);
     }
 }
